--- a/index.html
+++ b/index.html
@@ -10,42 +10,83 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <div class="container-fluid">
-        <div class="jumbotron">
-            <h1>BINARY CALCULATOR</h1>
-        </div>
-        <input type="text" id="view" size="140">
-        <div id="button" class="btn">
-            <div class="top"><br>
-                <button class="grn" id="btn0">0</button>
-                <button class="grn" id="btn1">1</button>
-                <button class="dgrn" id="btnclr">C</button>
-                <button class="dgrn" id="btneql">=</button><br>
-            </div>
-            <div class="lower">
-                <button id="sum" class="operator">+</button>
-                <button id="sub" class="operator">-</button>
-                <button id="mul" class="operator">*</button>
-                <button id="divi" class="operator">/</button>
-            </div>
-        </div>
-    </div>
+<body> 
+    <div class="container"> 
+        <div class="jumbotron"> 
+            <h1>Binary Calculator</h1> 
+            <div id="output"></div><br>
+            <div class="container mt-2"> 
+                <div class="row"> 
+                    <div class="col-12"> 
+                        <button type="button" class="btn btn-light" onclick="input('0')">0</button> 
+                        <button type="button" class="btn btn-light" onclick="input('1')">1</button> 
+                        <button type="button" class="btn btn-danger float-right ml-2" onclick="cls()">AC</button> 
+                        <button type="button" class="btn btn-warning float-right" onclick="backspace()">Clear</button> 
+                    </div><br> 
+                </div> 
+                <div class="row mt-2"> 
+                    <div class="col-12"> 
+                        <button type="button" class="btn btn-info" onclick="input('+')">+</button> 
+                        <button type="button" class="btn btn-info" onclick="input('-')">-</button> 
+                        <button type="button" class="btn btn-info" onclick="input('*')">*</button> 
+                        <button type="button" class="btn btn-info" onclick="input('/')">/</button> 
+                    </div><br>
+                </div> 
+                <div class="row mt-2"> 
+                    <div class="col-12"> 
+                        <button type="button" class="btn btn-success" onclick="calculate()">Calculate</button> 
+                    </div> 
+                </div> 
+            </div> 
+        </div> 
+    </div> 
     <script>
-        $(document).ready(function(){
-            var view=""
-            $("#btn0").click(function(){
-                $("#view").val(0);
-            })
-            $("#btn1").click(function(){
-                $("#view").val(1);
-            })
-            $("#btnclr").click(function() { 
-		            var o = $("#view").val();
-	                $("#view").val(o.substring(0,o.length - 1));
-                })
-            
-        })
+            var scr = ""; 
+            function calculate() { 
+                if (scr.indexOf("+") != -1) { 
+                    var num = scr.split("+");  
+                    var x = parseInt(num[0], 2);
+                    var y = parseInt(num[1], 2);  
+                    var sum = x + y; 
+                    var ans = sum.toString(2); 
+                } else if (scr.indexOf("-") != -1) { 
+                    var num = scr.split("-"); 
+                    var x = parseInt(num[0], 2); 
+                    var y = parseInt(num[1], 2); 
+                    var sub = x - y; 
+                    var ans = sub.toString(2); 
+                } else if (scr.indexOf("*") != -1) {
+                    var num = scr.split("*"); 
+                    var x = parseInt(num[0], 2); 
+                    var y = parseInt(num[1], 2); 
+                    var mul = x * y; 
+                    var ans = mul.toString(2); 
+                } else if (scr.indexOf("/") != -1) {
+                    var num = scr.split("/"); 
+                    var x = parseInt(num[0], 2); 
+                    var y = parseInt(num[1], 2); 
+                    var div = x / y; 
+                    var ans = div.toString(2); 
+                } 
+                scr = ans; 
+                document.getElementById("output").innerHTML = scr; 
+            } 
+
+            function input(ch) { 
+                scr += ch; 
+                document.getElementById("output").innerHTML = scr; 
+            } 
+
+            function backspace() { 
+                var b = document.getElementById("output").innerHTML; 
+                scr = b.substring(0, b.length - 1); 
+                document.getElementById("output").innerHTML = scr; 
+            } 
+
+            function cls() { 
+                scr = ""; 
+                document.getElementById("output").innerHTML = scr; 
+            } 
     </script>
 </body>
 </html>
