--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Binary Calculator</title>
     <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -12,9 +12,13 @@
 </head>
 <body> 
     <div class="container"> 
-        <div class="jumbotron"> 
+        <div class="jumbotron">
+            <div class="row"> 
+            <div class="col-12"> 
             <h1>Binary Calculator</h1> 
             <div id="output"></div><br>
+            </div>
+            </div>
             <div class="container mt-2"> 
                 <div class="row"> 
                     <div class="col-12"> 
